IEEE 802.15.4 frame check sequence in "Chipcon mode" not displayed correctly
This issue was migrated from bug 4507 in our old bug tracker.
Original bug information:
Reporter: Arasch Honarbacht
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: Windows Vista
Platform: x86
Version: 1.2.5
Attachments:
bug4507_1.patch: Trivial patch to display RSSI as dB instead of dBm.
ieee802154-chipcon-fcs-bug.pcap: A capture file illustrating the bug. Made with ubisys technologies' IEEE 802.15.4 USB Stick with dedicated RNDIS firmware for Wireshark.