Copy over revisions from the trunk:

------------------------------------------------------------------------
  r50125 | cmaynard | 2013-06-24 07:30:00 -0700 (Mon, 24 Jun 2013) | 3 lines
  Changed paths:
     M /trunk/epan/dissectors/packet-ieee802154.c

  Display RSSI in dB instead of dBm.  Fixes the last remaining issue reported in https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=4507
  #BACKPORT(1.10,1.8)
  ------------------------------------------------------------------------
  r50127 | guy | 2013-06-24 12:00:55 -0700 (Mon, 24 Jun 2013) | 2 lines
  Changed paths:
     M /trunk/epan/dissectors/packet-eth.c

  The Ethernet FCS is 32 bits, not 16 bits.
  ------------------------------------------------------------------------
  r50128 | cmaynard | 2013-06-24 12:27:47 -0700 (Mon, 24 Jun 2013) | 2 lines
  Changed paths:
     M /trunk/epan/dissectors/packet-eth.c

  A follow-up to r50127 to highlight the correct 4 bytes of the Ethernet FCS for the hf_eth_fcs_good and hf_eth_fcs_bad fields.
  ------------------------------------------------------------------------
  r50151 | pascal | 2013-06-25 14:05:28 -0700 (Tue, 25 Jun 2013) | 3 lines
  Changed paths:
     M /trunk/epan/dissectors/packet-ansi_637.c

  From Reinhard Speyerer via https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=8851:
  ansi_637_tele dissector displays MSB as MBS for Call-Back Number
  ------------------------------------------------------------------------
  r50185 | pascal | 2013-06-27 03:17:39 -0700 (Thu, 27 Jun 2013) | 3 lines
  Changed paths:
     M /trunk/epan/dissectors/packet-imap.c

  Fix https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=8857 :
  Do not assume that we must have at least 1 character present before \r\n
  ------------------------------------------------------------------------


Copy over by hand:

  ------------------------------------------------------------------------
  r50173 | morriss | 2013-06-26 11:19:43 -0700 (Wed, 26 Jun 2013) | 8 lines
  Changed paths:
     M /trunk/acinclude.m4

  (Attempt to) fix https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=8813 :

  Enable INET6 checking on Solaris versions other than 5.8.

  (Yes, theoretically this should be checking for Solaris 5.7 or later.  I'm
  going to go out on a limb and assume that no one is actually still using 5.7
  or, if they are, they aren't trying to compile a modern Wireshark on it...)
  ------------------------------------------------------------------------


Update the release notes.

svn path=/trunk-1.8/; revision=50848